--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,32 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="transparent_white">#bbffffff</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="Transparent">#00ffffff</color>
+    <color name="blue">#1086F4</color>
+    <!-- <color name="red">#ff0000</color> -->
+    <color name="mainbg">#f0f0f0</color>
+    <color name="greendim">#e0ffff</color>
+    <color name="bluetheme">#0190d7</color>
+    <color name="press_bluetheme">#034767</color>
+    <color name="graytheme">#abaaaa</color>
+    <color name="gray">#5f5f5f</color>
+    <color name="grey_light">#eee</color>
+    <color name="grey">#888</color>
+    <color name="grey_dark">#000</color>
+    <color name="red">#CC0000</color>
+    <color name="textred">#FF4040</color>
+    <color name="textgrey">#666666</color>
+    <color name="green">#008200</color>
+    <color name="gray_dim">#c0c0c0</color>
+    <color name="gray_64">#646464</color>
+    <color name="gray_background">#f0f0f0</color>
+    <color name="interphone_rightitem_gray_background">#ac000000</color>
+    <color name="white_background">#ffffff</color>
+    <color name="blue_text">#008fd7</color>
+    <color name="navpage">#FFE1E8EB</color>
+    <color name="line">#cdcdcd</color>
+    <color name="style_black_text">#898989</color>
 </resources>
